Updated legal documents (privacy, refund, terms)

--- a/terms.html
+++ b/terms.html
@@ -29,7 +29,7 @@
 <p><strong>Third-party Social Media Service</strong> means any services or content (including data, information, products or services) provided by a third-party that may be displayed, included or made available by the Service.</p>
 </li>
 <li>
-<p><strong>Website</strong> refers to Ápolástan Jegyzetek, accessible from <a href="https://apolastanjegyzetek.netlify.app" rel="external nofollow noopener" target="_blank">https://apolastanjegyzetek.netlify.app</a></p>
+<p><strong>Website</strong> refers to Ápolástan Jegyzetek, accessible from <a href="https://apolastan-jegyzetek-qwlt.onrender.com" rel="external nofollow noopener" target="_blank">https://apolastan-jegyzetek-qwlt.onrender.com</a></p>
 </li>
 <li>
 <p><strong>You</strong> means the individual accessing or using the Service, or the company, or other legal entity on behalf of which such individual is accessing or using the Service, as applicable.</p>
