--- a/refund.html
+++ b/refund.html
@@ -10,7 +10,7 @@ The following definitions shall have the same meaning regardless of whether they
 <li><strong>Company</strong> (referred to as either &quot;the Company&quot;, &quot;We&quot;, &quot;Us&quot; or &quot;Our&quot; in this Disclaimer) refers to Ápolástan Jegyzetek.</li>
 <li><strong>Service</strong> refers to the Website.</li>
 <li><strong>You</strong> means the individual accessing the Service, or the company, or other legal entity on behalf of which such individual is accessing or using the Service, as applicable.</li>
-<li><strong>Website</strong> refers to Ápolástan Jegyzetek, accessible from <a href="https://apolastanjegyzetek.netlify.app" rel="external nofollow noopener" target="_blank">https://apolastanjegyzetek.netlify.app</a></li>
+<li><strong>Website</strong> refers to Ápolástan Jegyzetek, accessible from <a href="https://apolastan-jegyzetek-qwlt.onrender.com" rel="external nofollow noopener" target="_blank">https://apolastan-jegyzetek-qwlt.onrender.com</a></li>
 </ul>
 <h2>Disclaimer</h2>
 <p>The information contained on the Service is for general information purposes only.</p>
