--- a/index.html
+++ b/index.html
@@ -1807,9 +1807,9 @@ document.querySelectorAll('.unlock-btn').forEach(button => {
         <footer>
     <p>Contact: apolastan.mindenkinek@gmail.com</p>
     <p>
-        <a href="privacy%20policy">Privacy Policy</a> | 
-        <a href="terms.html">Terms & Conditions</a> | 
-        <a href="refund.html">Refund Policy</a>
+         <a href="/terms.html">Terms of Service</a> | 
+  <a href="/Privacy%20Policy.html">Privacy Policy</a> | 
+  <a href="/refund.html">Refund Policy</a>
     </p>
     <p>© 2026 Apolástan Jegyzetek</p>
         </footer>
