--- a/index.html
+++ b/index.html
@@ -1808,7 +1808,7 @@ document.querySelectorAll('.unlock-btn').forEach(button => {
     <p>Contact: apolastan.mindenkinek@gmail.com</p>
     <p>
          <a href="/terms.html">Terms of Service</a> | 
-  <a href="/Privacy%20Policy.html">Privacy Policy</a> | 
+  <a href="https://apolastan-jegyzetek-qwlt.onrender.com/Privacy%20Policy.html">Privacy Policy</a> | 
   <a href="/refund.html">Refund Policy</a>
     </p>
     <p>© 2026 Apolástan Jegyzetek</p>
